--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <div class="row">
+    <button id="bite-me" class="btn btn-danger col-6 offset-3">SHARK ATTACK</button>
+  </div>
+  <div class="row">
     <div class="col-6">
       <div id="tank"></div>
     </div>
